# madari-oss

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  copy.bara.sky  pubspec.yaml
.github/workflows/: build-deploy.yaml  release.yaml
android/app/: build.gradle
assets/data/: regions.json
drift_schemas/app_database/: drift_schema_v1.json
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  main_web.dart  routes.dart
lib/app/: app.dart  app_router.dart  app_web.dart
lib/consts/: data.dart
lib/data/: db.dart  global_logs.dart
lib/database/: app_database.dart  database_provider.dart
lib/engine/: connection.dart  connection_type.dart  engine.dart  library.dart
lib/extension/: image_to_bytes.dart
lib/pages/: category.page.dart  chat.container.dart  collection_tab.page.dart  download.page.dart  getting_started.page.dart  home.page.dart  home_tab.page.dart  home_tv.page.dart  library_view.page.dart  more_tab.page.dart  search_tab.page.dart  sign_in.page.dart  sign_up.page.dart  stremio_item.page.dart
lib/utils/: array-extension.dart  auth_refresh.dart  cached_storage_static.dart  common.dart  external_player.dart  grid.dart  load_language.dart  ocr_file.dart  (+4 more)
linux/: CMakeLists.txt  my_application.cc
messages/: torrent.proto
native/hub/: Cargo.toml
native/hub/src/: lib.rs  torrent_server.rs
test/: stremio_connection_service_test.dart  trakt_service_test.dart  widget_test.dart
test_web/: code.js  package.json
web/: _headers  index.html  manifest.json
windows/: CMakeLists.txt
(+226 files in other folders)
