[package]
name = "hub"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
rinf = "7.1.1"
prost = "0.13.0"
tokio = { version = "1", features = ["rt", "macros"] }
log = "0.4.25"
messages = "0.3.1"

# Uncomment below to target the web.
# tokio_with_wasm = { version = "0.7.2", features = ["rt", "macros"] }
# wasm-bindgen = "0.2.95"
